--- a/package.json
+++ b/package.json
@@ -6,11 +6,9 @@
   "scripts": {},
   "author": "https://github.com/rajeshwarpatlolla, rajeshwar.patlolla@gmail.com",
   "license": "MIT",
-  "dependencies": {
-    
-  },
+  "dependencies": {},
   "devDependencies": {
-    "gulp": "~3.8.11",
+    "gulp": "^3.8.11",
     "gulp-clean": "^0.3.1",
     "gulp-concat": "~2.4.3",
     "gulp-minify-css": "~0.4.5",
